# pythonlearning

./: .gitignore  README.md
01ModulesPackagesFiles/: ModulesPackagesFiles.ipynb  learningmodule.py  pyproject.toml
01ModulesPackagesFiles/learningpackage/: __init__.py  extras.py  functions.py
01ModulesPackagesFiles/learningpackage/subpackage/: __init__.py  _another.py
02TransitioningFromNotebooks/: TidyModel.ipynb  TransitioningFromNotebooks.ipynb  pyproject.toml
02TransitioningFromNotebooks/learningmodel/: helpers.py  model.py
02TransitioningFromNotebooks/learningmodel/data/: infections.csv
03PackagingAndEnvironments/: environment_workshop03.yml  environment_workshop03pip.yml  pyproject.toml  pyproject_original.toml
03PackagingAndEnvironments/packaging_workshop/: greet.py
04Jax/: pyproject.toml  random_grad.ipynb
